packages/cmk-frontend/src/themes/facelift/scss/_main.scss
/* ... */
table.vs_dict_text {
  padding: 0;
  margin: 0;
  border-collapse: collapse;

  td,
  table.data tr td & > tbody > tr > td {
    padding: 0;
    margin: 0;
    vertical-align: top;
  }
}

table.valuespec_tuple {
  border-collapse: collapse;

  &.horizontal tr:nth-child(1) td {
    padding-top: 0; // override nform default
  }

  td {
    padding: 0;

    &.tuple_left {
      vertical-align: middle;
    }

    &.tuple_right.has_title > span.vs_fixed_value {
      @include floating-text-mixin;
    }

    &.tuple_td {
      &,
      sup {
        vertical-align: top;
      }
    }
  }

  span.title {
    font-size: $font-size-small;
  }
}

table.vs_date {
  display: inline-block;
  vertical-align: middle;
  border-spacing: 0;

  td {
    padding-top: 0;
    padding-right: 3px;
  }

  th {
    padding: 0;
    font-size: $font-size-small;
    font-weight: $font-weight-default;
    text-align: center;
  }
}

table.valuespec_listof {
  width: 100%;

  .unused {
    display: none;
  }

  tr:first-child > td {
    &.vlof_buttons,
    &.vlof_content {
      padding-top: 0;
    }

    &.vlof_buttons {
      padding-bottom: $spacing-half;
    }
  }
}

div.valuespec_listof {
  table {
    border-collapse: collapse;
  }

  &.floating > table > tbody > tr > td:first-child {
    vertical-align: top;
  }
}

div.valuespec_listof_floating_container {
  margin-top: -4px;
  vertical-align: top;

  > table {
    float: left;

    td {
      vertical-align: top;

      &.vlof_buttons img {
        width: 12px;
        height: 15px;
        margin-top: 4px;
      }

      &.vlof_content .tagify {
        tag {
          margin: 4px 5px 2px 4px;

          x {
            display: none;
          }

          > div {
            padding-right: 0.3em;
          }
        }

        span.tagify__input {
          margin: 3px 5px 2px 4px;
        }
      }
    }
  }
}

table.nform
  table.valuespec_listof
  div.valuespec_listof_floating_container
  > table
  > tbody
  > tr
  > td {
  border-bottom: none;
}

table.vs_duallist {
  td {
    width: 50%;

    select {
      width: 100%;
      height: 200px;
      resize: both;
    }

    &.head {
      text-align: center;
    }
  }

  a.control {
    display: inline-block;
    float: right;
    width: 14px;
    text-align: center;
    text-decoration: none;

    &:hover {
      text-decoration: none;
      background-color: $duallist-control-a-hover-bg-color;
    }

    &.add {
      float: right;
    }

    &.del {
      float: left;
    }
  }
}

textarea.tt {
  font-family: $font-family-monospace;
}

div.listofstrings.horizontal {
  clear: left;

  > div {
    float: left;
  }
}

table.listchoice {
  border-collapse: collapse;

  td {
    height: 12px;
    padding: 0;
    margin: 0;

    span.checkbox {
      height: $input-field-height;
    }

    input[type='checkbox'] {
      height: 12px;
      margin: 0;
    }
  }
}

table.alternative {
  border-collapse: collapse;

  td:first-child {
    padding-right: 0.5 * $spacing;
  }
}

div.popup_container {
  position: relative;
}

div#hover_menu {
  position: absolute;
  /* The hover menu needs to have a higher z-index than the highest element
     on the pages. In this case it was the perfometer which had 30. */
  z-index: 50;
  width: auto;
  color: $font-color;

  div.error,
  div.message {
    width: 350px;
    margin: 0;
  }

  div.message {
    color: $font-color;
    background-color: $bg-color;
  }

  .graph_container {
    display: block;
    float: left;
    margin: 0 2px 2px 0;
    color: $font-color;
    background-color: $graph-hover-popup-bg-color;
    border: $graph-hover-popup-border;
    box-shadow: $graph-hover-popup-box-shadow;

    div.title {
      display: block;
    }

    div.time {
      letter-spacing: 0;
    }
  }

  div.metric_attributes {
    border-radius: 4px;
    display: block;
    float: left;
    padding: 8px 8px 8px 8px;
    color: $font-color;
    background-color: $graph-hover-popup-bg-color;
    border: $graph-hover-popup-border;
    box-shadow: $graph-hover-popup-box-shadow;
    text-align: left;

    table {
      border-collapse: collapse;
    }

    th {
      border-bottom: $graph-legend-th-border-bottom;
    }

    th,
    td {
      padding: 5px;
    }
  }
}

/* Color picker styling */

div.popup_trigger.colorpicker div.popup_menu {
  min-width: auto;
}

.cp-preview {
  width: 28px;
  height: 18px;
  border: 1px solid $darkgrey;
  border-radius: $theme-border-radius;
  box-shadow: none;

  table.data td & {
    position: relative;
    top: 2px;
  }
}

.picker-wrapper,
.slide-wrapper {
  position: relative;
  float: left;
}

.picker-indicator,
.slide-indicator {
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;
}

.picker,
.slide {
  float: left;
  cursor: crosshair;
}

.cp-small {
  float: left;
  width: 170px;

  .picker {
    width: 150px;
    height: 150px;
    background-color: $white;
  }

  .slide {
    width: 15px;
    height: 150px;
  }

  .slide-wrapper {
    margin-left: 5px;
  }

  .picker-indicator {
    width: 1px;
    height: 1px;
    background-color: $white;
    border: 1px solid $black;
  }

  .slide-indicator {
    left: 0;
    width: 100%;
    height: 2px;
    background-color: $black;
  }
}

.cp-input {
  float: left;
  margin-top: 2px;
  color: $font-color;

  input,
  select,
  textarea,
  div.snapin select,
  div.snapin & select,
  #mk_side_search_field {
    margin: 0;
    margin-bottom: 8px;
  }

  input {
    width: 106px;
  }
}

div.popup_trigger.colorpicker .popup_menu {
  top: 17px;
  left: 26px;
}
/* ... */

